# prism-v3

./: .env.example  .gitignore  PRISM.command  README.md  app.py  config.yaml  pyproject.toml  render.yaml  requirements.txt  run.py
docs/: methodology.md
notebooks/: Prism_Pilot_V03.ipynb
prism/: config.py  export.py  htmlreport.py  portfolio.py  report.py  scanner.py  scoring.py  shock.py
prism-v3/: app.py  render.yaml  requirements.txt
prism-v3/.github/workflows/: daily_alerts.yml  weekly_health.yml
prism-v3/.streamlit/: config.toml
prism-v3/alerts/: macro_monitor.py
prism-v3/config/: settings.json  sp500_tickers.py
prism-v3/core/: data_pipeline.py  scoring.py  sp500_scanner.py
prism-v3_old/: .gitignore  README.md  app.py
prism-v3_old/.streamlit/: config.toml
prism-v3_old/alerts/: earnings_alerts.py  health_check.py  price_alerts.py
prism-v3_old/config/: settings.json  watchlist.json
prism/data/: common.py  fetch.py  finnhub.py  fmp.py  yahoo.py
scripts/: calibrate_shocks.py  parity_check.py
tests/: test_data.py  test_scanner.py  test_scoring.py
